# todo

./: Cargo.toml  README.md  metadata.json
pkg/: manifest.json
resources/: README.md
resources/guides/: 00-QUICK-REFERENCE.md  01-COMMON-PATTERNS.md  02-TROUBLESHOOTING.md  04-P2P-PATTERNS.md  06-TESTING-DEBUGGING.md  07-COMPLETE-EXAMPLES.md  08-MANIFEST-AND-DEPLOYMENT.md  09-CAPABILITIES-GUIDE.md
test/: tests.toml
test/todo-test/: Cargo.toml  metadata.json
test/todo-test/api/: hyperapp_skeleton_test:template.os-v0.wit
test/todo-test/pkg/: manifest.json
test/todo-test/todo-test/: Cargo.toml
test/todo-test/todo-test/src/: lib.rs
todo/: Cargo.toml
todo/src/: lib.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  ChatView.tsx  RateLimitModal.css  RateLimitModal.tsx  TrialModal.css  TrialModal.tsx  index.css
ui/src/spider/: api.ts  websocket.ts
ui/src/store/: todo.ts
ui/src/types/: global.ts  spider.ts  todo.ts
