[dependencies]
anyhow = "1.0"
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.42.1"

[dependencies.chrono]
features = [
    "serde",
    "clock",
]
version = "0.4"

[dependencies.hyperapp_macro]
git = "https://github.com/hyperware-ai/hyperapp-macro"
rev = "1495073"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
git = "https://github.com/hyperware-ai/process_lib"
rev = "1a6ad9d"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.todo_caller_utils]
optional = true
path = "../target/todo-caller-utils"

[features]
caller-utils = ["todo_caller_utils"]
public-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "todo"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
